# python-and-sql

./: README.md
kaggle-brazilian-ecommerce-olist/: .gitattributes  .gitignore  README.md  docker-compose.yaml  example-queries.sh  example-writing-to-csv.sh  example-writing-to-json.sh  example-writting-to-csv.sh  format.sh  import-data.sh  pyproject.toml
kaggle-brazilian-ecommerce-olist/example_queries/: __init__.py
kaggle-brazilian-ecommerce-olist/example_writing_to_csv/: __init__.py
kaggle-brazilian-ecommerce-olist/example_writing_to_json/: __init__.py
kaggle-brazilian-ecommerce-olist/example_writting_to_csv/: __init__.py
kaggle-brazilian-ecommerce-olist/import_data/: __init__.py
kaggle-brazilian-ecommerce-olist/initdb/: 01_create_tables.sql
kaggle-brazilian-ecommerce-olist/kaggle-brazilian-ecommerce-olist-dataset/: olist_order_items_dataset.csv  olist_order_payments_dataset.csv  olist_order_reviews_dataset.csv  olist_orders_dataset.csv  olist_products_dataset.csv  olist_sellers_dataset.csv
