[tool.poetry]
name = "kaggle-brazilian-ecommerce-olist"
version = "0.1.0"
description = ""
authors = ["Pricilla Patricia de Aragao <pricillapatricia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
